--- a/1-grid-privacy.ipynb
+++ b/1-grid-privacy.ipynb
@@ -67,7 +67,7 @@
     "from google import genai\n",
     "import time\n",
     "\n",
-    "client = genai.Client(api_key=\"AIzaSyCa_W1oSN7oxMSvY4vYj44madQo6JztpRA\")\n",
+    "client = genai.Client(api_key=\"xxx\")\n",
     "\n",
     "def get_sensitivity_score(category: str) -> float:\n",
     "    prompt = f\"\"\"\n",
